correcion de codigo de creacion

--- a/templates/auto_templates/creacion.html
+++ b/templates/auto_templates/creacion.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        se creo el auto {{marca, modelo}}
+        se creo el auto {{auto.marca}} {{auto.modelo}}
     </h1>
 </body>
 </html>
