--- a/inicio/templates/inicio/index.html
+++ b/inicio/templates/inicio/index.html
@@ -31,7 +31,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Bievenidos a mi inicio!!</h1>
+                            <h1 class="mb-5">Bienvenidos a mi inicio!!</h1>
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
