--- a/templates/probando_if_for.html
+++ b/templates/probando_if_for.html
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>  
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    <title>Document</title>
-</head>    
-<body>
-    <ul>
-    {% for num in numeros %}
-        {% if num > 250 %}
-        <li style="color:red"> Pepito {{num}}</li>
-        {% else %}
-        <li style="color:blue"> Pepito {{num}}</li>
-        {% endif %}
-    {% endfor %}
-    <ul>
+{% extends "base.html" %}
+{% block h1_header %}
+Bienvenidos a mi inicio!!
+{% endblock h1_header %}
 
-</body>
-</html>
+
+
+{% block main %}
+<ul>
+{% for num in numeros %}
+    {% if num > 250 %}
+    <li style="color:red"> Pepito {{num}}</li>
+    {% else %}
+    <li style="color:blue"> Pepito {{num}}</li>
+    {% endif %}
+{% endfor %}
+</ul>
+{% endblock main %}
