--- a/usuarios/templates/usuarios/logout.html
+++ b/usuarios/templates/usuarios/logout.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block title_head %}
-inicio
+cerrar sesion
 {% endblock title_head %}
 
 {% block h1_header %}
-Bienvenidos a mi inicio!!
-{% endblock h1_header %}
+Cerraste sesion correctamente
 
+{% endblock h1_header %}
