--- a/productos/templates/paletas/eliminar_paleta.html
+++ b/productos/templates/paletas/eliminar_paleta.html
@@ -1,27 +1,21 @@
 {% extends "base.html" %}
 
 {% block title_head %}
-Crear paleta
+Eliminar Paleta
 {% endblock title_head %}
 
 {% block h1_header %}
-Eliminar paleta
+Eliminar Paleta
 {% endblock h1_header %}
 
 {% block main %}
 
-<form action={% url "eliminar_paleta" paleta.id %} method='POST'>
+<form action={% url "eliminar_paleta" paleta.id%} method="POST">
     {% csrf_token %}
-  
-
-    {{form}}
     <p>
-        Desea confirmar el borrado de la paleta {{paleta}}?
+        Desea confirmar el borrado de la paleta {{paleta}}???
     </p>
-    <input type="submit" value="Confirmar Borrado">
-
+    <input type="submit" value="Confirmar borrado">
 </form>
-
-
 
 {% endblock main %}
