--- a/productos/templates/paletas/listado_de_paletas.html
+++ b/productos/templates/paletas/listado_de_paletas.html
@@ -9,25 +9,21 @@ Listado de paletas
 {% endblock h1_header %}
 
 {% block main %}
-{% comment %} <a href={% url "crear_auto_v2"%}>Crear Auto</a> {% endcomment %}
+
+<a href={% url "crear_paleta" %}>Crear Paleta</a>
+
 {% if paletas %}
-<ul>
-    {% for paleta in paletas %}
-    <li>
-        {{paletas}} | 
-        <a href={% url "eliminar_paleta" paleta.id%}>Eliminar</a> | 
-        <a href={% url "editar_paleta" paleta.id%}>Editar</a> |
-        <a href={% url "ver_paleta" paleta.id%}>Ver</a>
-        
-    </li>
-    {% endfor %}
-</ul>
+    <ul>    
+        {% for paleta in paletas %}
+        <li>{{paleta}} | 
+            <a href={% url "eliminar_paleta" paleta.id%}>Eliminar</a> |
+            <a href={% url "editar_paleta" paleta.pk%}>Editar</a> | 
+            <a href={% url "ver_paleta" paleta.id%}>Ver</a> 
+        </li>
+        {% endfor %}
+    </ul>
 {% else %}
-<p>
-    No hay paletas creados.
-
-</p>
+<p>No hay paletas creados.</p>
 {% endif %}
-
 
 {% endblock main %}
