--- a/productos/templates/paletas/ver_paleta.html
+++ b/productos/templates/paletas/ver_paleta.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-
 {% block title_head %}
-ver paleta
+Paleta
 {% endblock title_head %}
 
 {% block h1_header %}
@@ -10,9 +9,8 @@ ver paleta
 
 {% block main %}
 <ul>
-    <li>Marca: {{paleta.marca}} </li>
-    <li>Marca: {{paleta.descripcion}} </li>
-    <li>Marca: {{paleta.fecha}} </li>
-
+    <li>Marca: {{paleta.marca}}</li>
+    <li>Descripcion: {{paleta.descripcion}}</li>
+    <li>Fecha: {{paleta.fecha}}</li>
 </ul>
 {% endblock main %}
