--- a/templates/template2.html
+++ b/templates/template2.html
@@ -1,1 +1,7 @@
-<h1>Mi Template 1</h1> -- Fecha: {{fecha}} -- Buenas {{nombre}} {{apellido}} {{edad}}
+{% extends "inicio/index.html" %}
+
+{% block h1_header %}Mi Template 1 {% endblock h1_header %}
+
+{% block main %}
+-- Fecha: {{fecha}} -- Buenas {{nombre}} {{apellido}} {{edad}}
+{% endblock main %}
