--- a/templates/base.html
+++ b/templates/base.html
@@ -33,20 +33,17 @@
                 <a class="navbar-brand" href={% url "autos" %}>Autos</a>
                 <a class="navbar-brand" href={% url "paletas" %}>Paletas</a>
 
-                <a class="navbar-brand" href='#'>{{}}</a>
                 {% if request.user.is_authenticated %}
+                <a class="navbar-brand" href='#'>{{request.user.username}}</a>
                 {{request.user.is_authenticated}}
                     <form action={% url "logout" %} method='POST'>
                         {% csrf_token %}
-                    
-                    
                         <input type="submit" class="btn btn-secondary" value="Cerrar Sesion">
-                    
                     </form>
                 {% else %}
                 <a class="btn btn-primary" href={% url "login" %}>Iniciar Sesion</a>
+                <a class="btn btn-danger" href={% url "registro" %}>Registrarse</a>
                 {% endif %}
-                <a class="btn btn-primary" href={% url "registro" %}>Registrarse</a>
                 
 
             </div>
