--- a/templates/probando_if_for.html
+++ b/templates/probando_if_for.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
 {% block h1_header %}
-Bienvenidos a mi inicio!!
+<h1>
+    Probando
+</h1>
 {% endblock h1_header %}
-
 
 
 {% block main %}
 <ul>
-{% for num in numeros %}
-    {% if num > 250 %}
-    <li style="color:red"> Pepito {{num}}</li>
-    {% else %}
-    <li style="color:blue"> Pepito {{num}}</li>
-    {% endif %}
-{% endfor %}
+    {% for num in numeros %}
+        {% if num > 250 %}
+        <li style="color:red"> Pepito {{num}}</li>
+        {% else %}
+        <li style="color:blue"> Pepito {{num}}</li>
+        {% endif %}
+    {% endfor %}
 </ul>
 {% endblock main %}
