--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -6,21 +6,17 @@ Iniciar sesion
 
 {% block h1_header %}
 Iniciar sesion
-
 {% endblock h1_header %}
 
 {% block main %}
 
 <form action={% url "login" %} method='POST'>
     {% csrf_token %}
-  
 
     {{formulario}}
     
-    <input type="submit" value="Iniciar">
+    <input type="submit" value="Iniciar Sesion">
 
 </form>
-
-
 
 {% endblock main %}
