--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,10 @@
                 <a class="navbar-brand" href={% url "paletas" %}>Paletas</a>
 
                 {% if request.user.is_authenticated %}
-                <a class="navbar-brand" href='#'>{{request.user.username}}</a>
-                {{request.user.is_authenticated}}
+                <a class="navbar-brand" href={% url "editar_perfil" %}>{{request.user.username}}</a>
+
+                {% comment %} <a class="navbar-brand" href='#'>{{request.user.username}}</a> {% endcomment %}
+                {% comment %} {{request.user.is_authenticated}} {% endcomment %}
                     <form action={% url "logout" %} method='POST'>
                         {% csrf_token %}
                         <input type="submit" class="btn btn-secondary" value="Cerrar Sesion">
