--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,14 @@
                 <a class="navbar-brand" href={% url "paletas" %}>Paletas</a>
 
                 {% if request.user.is_authenticated %}
-                <a class="navbar-brand" href={% url "editar_perfil" %}>{{request.user.username}}</a>
+                <a class="navbar-brand" href={% url "editar_perfil" %}>
+                    {% if request.user.datosextra.avatar %}
+                    <img src={{request.user.datosextra.avatar.url}} alt="Avatar" height='40px'>
+                    {% endif %}
+                    {% comment %} {% else %}
+                    <img src="" alt=""> si se quiere usar una imagen generica desde static {% endcomment %}
+                    {{request.user.username}}
+                </a>
 
                 {% comment %} <a class="navbar-brand" href='#'>{{request.user.username}}</a> {% endcomment %}
                 {% comment %} {{request.user.is_authenticated}} {% endcomment %}
